@@ -1,5 +1,9 @@
 2001-08-03  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/dialog-sxsincelast.c: same as below
+
+	* src/gnc-exp-parser.[ch]: seperate->separate
+
 	* src/engine/gnc-book.c: fix warnings
 
 	* doc/sgml/C/xacc-sxeditor.sgml: fix warning
